--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,7 @@ project(COLMAP)
 
 set(COLMAP_VERSION "3.7")
 set(COLMAP_VERSION_NUMBER "3700")
-
+set(CMAKE_CXX_STANDARD 14)
 
 ################################################################################
 # Include CMake dependencies
@@ -57,7 +57,7 @@ include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/CMakeHelper.cmake NO_POLICY_SCOPE)
 option(SIMD_ENABLED "Whether to enable SIMD optimizations" ON)
 option(OPENMP_ENABLED "Whether to enable OpenMP parallelization" ON)
 option(IPO_ENABLED "Whether to enable interprocedural optimization" ON)
-option(CUDA_ENABLED "Whether to enable CUDA, if available" ON)
+option(CUDA_ENABLED "Whether to enable CUDA, if available" OFF)
 option(OPENGL_ENABLED "Whether to enable OpenGL, if available" ON)
 option(TESTS_ENABLED "Whether to build test binaries" OFF)
 option(PROFILING_ENABLED "Whether to enable google-perftools linker flags" OFF)
@@ -65,6 +65,8 @@ option(CGAL_ENABLED "Whether to enable the CGAL library" ON)
 option(BOOST_STATIC "Whether to enable static boost library linker flags" ON)
 set(CUDA_ARCHS "Auto" CACHE STRING "List of CUDA architectures for which to \
 generate code, e.g., Auto, All, Maxwell, Pascal, ...")
+
+add_compile_options(-Wno-sign-compare)
 
 if(TESTS_ENABLED)
     enable_testing()
@@ -401,45 +403,45 @@ set_target_properties(
 # Install and uninstall scripts
 ################################################################################
 
-# Install header files.
-install(DIRECTORY src/
-        DESTINATION include/colmap
-        FILES_MATCHING PATTERN "*.h")
-install(DIRECTORY lib/
-        DESTINATION include/colmap/lib
-        FILES_MATCHING REGEX ".*[.]h|.*[.]hpp|.*[.]inl")
+# # Install header files.
+# install(DIRECTORY src/
+#         DESTINATION include/colmap
+#         FILES_MATCHING PATTERN "*.h")
+# install(DIRECTORY lib/
+#         DESTINATION include/colmap/lib
+#         FILES_MATCHING REGEX ".*[.]h|.*[.]hpp|.*[.]inl")
 
-# Generate and install CMake configuration.
-configure_file("${CMAKE_CURRENT_SOURCE_DIR}/cmake/CMakeConfig.cmake.in"
-               "${CMAKE_CURRENT_BINARY_DIR}/COLMAPConfig.cmake" @ONLY)
-install(FILES "${CMAKE_CURRENT_BINARY_DIR}/COLMAPConfig.cmake"
-        DESTINATION "share/colmap")
-configure_file("${CMAKE_CURRENT_SOURCE_DIR}/cmake/CMakeConfigVersion.cmake.in"
-               "${CMAKE_CURRENT_BINARY_DIR}/COLMAPConfigVersion.cmake" @ONLY)
-install(FILES "${CMAKE_CURRENT_BINARY_DIR}/COLMAPConfigVersion.cmake"
-        DESTINATION "share/colmap")
+# # Generate and install CMake configuration.
+# configure_file("${CMAKE_CURRENT_SOURCE_DIR}/cmake/CMakeConfig.cmake.in"
+#                "${CMAKE_CURRENT_BINARY_DIR}/COLMAPConfig.cmake" @ONLY)
+# install(FILES "${CMAKE_CURRENT_BINARY_DIR}/COLMAPConfig.cmake"
+#         DESTINATION "share/colmap")
+# configure_file("${CMAKE_CURRENT_SOURCE_DIR}/cmake/CMakeConfigVersion.cmake.in"
+#                "${CMAKE_CURRENT_BINARY_DIR}/COLMAPConfigVersion.cmake" @ONLY)
+# install(FILES "${CMAKE_CURRENT_BINARY_DIR}/COLMAPConfigVersion.cmake"
+#         DESTINATION "share/colmap")
 
-# Install find_package scripts for dependencies.
-install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/cmake
-        DESTINATION share/colmap
-        FILES_MATCHING PATTERN "Find*.cmake")
+# # Install find_package scripts for dependencies.
+# install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/cmake
+#         DESTINATION share/colmap
+#         FILES_MATCHING PATTERN "Find*.cmake")
 
-# Install batch scripts under Windows.
-if(IS_MSVC)
-    install(FILES "scripts/shell/COLMAP.bat" "scripts/shell/RUN_TESTS.bat"
-            PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
-                        GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
-            DESTINATION "/")
-endif()
+# # Install batch scripts under Windows.
+# if(IS_MSVC)
+#     install(FILES "scripts/shell/COLMAP.bat" "scripts/shell/RUN_TESTS.bat"
+#             PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
+#                         GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
+#             DESTINATION "/")
+# endif()
 
-# Install application meny entry under Linux/Unix.
-if(UNIX AND NOT APPLE)
-    install(FILES "doc/COLMAP.desktop" DESTINATION "share/applications")
-endif()
+# # Install application meny entry under Linux/Unix.
+# if(UNIX AND NOT APPLE)
+#     install(FILES "doc/COLMAP.desktop" DESTINATION "share/applications")
+# endif()
 
-# Configure the uninstallation script.
-configure_file("${CMAKE_CURRENT_SOURCE_DIR}/cmake/CMakeUninstall.cmake.in"
-               "${CMAKE_CURRENT_BINARY_DIR}/CMakeUninstall.cmake"
-               IMMEDIATE @ONLY)
-add_custom_target(uninstall COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/CMakeUninstall.cmake)
-set_target_properties(uninstall PROPERTIES FOLDER ${CMAKE_TARGETS_ROOT_FOLDER})
+# # Configure the uninstallation script.
+# configure_file("${CMAKE_CURRENT_SOURCE_DIR}/cmake/CMakeUninstall.cmake.in"
+#                "${CMAKE_CURRENT_BINARY_DIR}/CMakeUninstall.cmake"
+#                IMMEDIATE @ONLY)
+# add_custom_target(uninstall COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/CMakeUninstall.cmake)
+# set_target_properties(uninstall PROPERTIES FOLDER ${CMAKE_TARGETS_ROOT_FOLDER})
